# finance-city-engine

./: .gitignore  CHANGES.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  VISUAL_UPGRADE.md  vcpkg.json
cmake/: EmscriptenToolchain.cmake
docs/: UPDATES_2026-03-31.md  WASM_EMDAWNWEBGPU_MIGRATION.md
scripts/: setup.sh  setup_emscripten.sh
shaders/: bloom_blur.wgsl  bloom_prefilter.wgsl  brdf_lut.comp.spv  brdf_lut.comp.wgsl  building.frag.spv  building.vert.spv  building.wgsl  equirect_to_cubemap.comp.spv  frustum_cull.comp.spv  frustum_cull.comp.wgsl  fxaa.wgsl  irradiance_map.comp.spv  particle.frag.spv  particle.vert.spv  prefilter_env.comp.spv  shadow.vert.spv  shadow.wgsl  skybox.frag.glsl  skybox.frag.spv  skybox.vert.spv  skybox.wgsl  tonemap.frag.glsl  tonemap.vert.glsl  tonemap.wgsl
src/: Application.cpp  Application.hpp
src/game/entities/: BuildingEntity.cpp  BuildingEntity.hpp
src/game/managers/: BuildingManager.cpp  WorldManager.cpp  WorldManager.hpp
src/game/sync/: PriceUpdate.hpp  WebSocketDataFeed.cpp  WebSocketDataFeed.hpp
src/rendering/: IBLManager.cpp  InstancedRenderData.hpp  Renderer.cpp  Renderer.hpp  RendererBridge.cpp  ShadowRenderer.cpp  TextureManager.cpp  TextureManager.hpp
src/rhi/: CMakeLists.txt
src/rhi/backends/vulkan/src/: VulkanRHIBindGroup.cpp
src/rhi/backends/webgpu/: CMakeLists.txt
src/rhi/backends/webgpu/include/rhi/webgpu/: WebGPUCommon.hpp  WebGPURHISwapchain.hpp
src/rhi/backends/webgpu/src/: WebGPURHIBindGroup.cpp  WebGPURHIBuffer.cpp  WebGPURHICommandEncoder.cpp  WebGPURHIDevice.cpp  WebGPURHIPipeline.cpp  WebGPURHISampler.cpp  WebGPURHIShader.cpp  WebGPURHISwapchain.cpp  WebGPURHISync.cpp  WebGPURHITexture.cpp
src/rhi/include/rhi/: RHIBindGroup.hpp  RHITypes.hpp
src/scene/: Camera.cpp  Camera.hpp
src/ui/: ImGuiManager.hpp
src/utils/: Vertex.hpp
tests/: wasm_shell.html
